feat: crud controller, service, mapper, repository of entity